Add front-end logic and connect it to back-end logic

--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="./main.js"></script>
-  <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=MedievalSharp|Megrim&display=swap" rel="stylesheet">
+  <!-- <script src="./main.js"></script> -->
+  <title>Shadow of the Dungeon</title>
 </head>
 <body>
+  <h1>Shadow of the Dungeon</h1>
+  <div class="display">
+      <p id="output"></p>
+      <div id='message'></div>
+  </div>
   
+  <div id="button-cont">
+    <button id='left'>left</button>
+    <button id="up">Up</button>
+    <button id="down">down</button>
+    <button id="right">right</button>
+  </div>
+  <div id="goblinBtns">
+    <button id="fight">Fight!</button>
+    <button id="run">Run!</button>
+  </div>
 </body>
 </html>
