--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,21 @@
         <p id="output"></p>
         <div id='message'></div>
     </div>
-    
+    <div id="playerStats">
+      <p>Potions: <span id="potions"></span></p>
+      <p>Health: <span id="health"></span></p>
+      <p>Gold: <span id="gold"></span></p>
+    </div>
+    <div id="goblinStats">
+      <p>Goblin Health: <span id="goblinHealth"></span></p>
+    </div>
     <div id="button-cont">
       <button id='left'>left</button>
       <button id="up">Up</button>
       <button id="down">down</button>
       <button id="right">right</button>
     </div>
+    <button id="potionBtn">Take Potion</button>
     <div id="goblinBtns">
       <button id="fight">Fight!</button>
       <button id="run">Run!</button>
@@ -31,6 +39,7 @@
       <button id="leave">Keep Going...</button>
     </div>
   </div>
+  <button id="start">START</button>
   
   <div id="gameOver">
     <h1>GAME OVER</h1>
